--- a/test1.yaml
+++ b/test1.yaml
@@ -2,8 +2,7 @@
   name: XMLRpcParser_Main
 
 docs:
-  - ::snakecase:
-      ::ref: name
+  - ::snakecase: <<name>>
   - ::uppercase:
       ::snakecase:
         ::ref: name
