--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,8 +18,11 @@ jobs:
           - '3.7'
           - '3.8'
           - '3.9'
-          - '3.10.0-alpha.7'
+          - '3.10'
+          - '3.11'
           - 'pypy-3.7'
+          - 'pypy-3.8'
+          - 'pypy-3.9'
         os:
           - ubuntu-latest
       fail-fast: false
